--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,11 @@ p {
 }
 
 .hero {
-    height: 800px;
+    margin-top: 25px;
+
+    height: 1500px;
     width: 100%;
+    
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
@@ -76,6 +79,7 @@ p {
 }
 
 .AsideClass {
+    margin-top: 25px;
     margin-right: 20px;
     padding: 20px;
     clear: both;
