--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 * {
-    box-sizing: border-box;
+    box-sizing: border-box; /*Doesn't change anything? */
     padding: 0;
     margin: 0; /* Will adjust the header section with 'horiseon' text and links */
     
@@ -22,9 +22,6 @@ body {
     font-size: 48px;
 }
 
-.header h1 .seo {
-   /* color: #d9dcd6;      'SEO' TEXT COLOUR from HoriSEOn text, commented out -> as above comment */
-}
 
 .header div {
     padding-top: 30px;      /* 3 links in header sections vertical position */
@@ -78,41 +75,43 @@ p {
 }
 
 .content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+    width: 100%;            
 }
 
 
 
 /* aside section attributes */
 .AsideClass {
-    margin-top: 25px;
-    margin-right: 20px;
+    position: absolute;
+    right: 100px;
+    bottom: -1652px;
+    
+    
     padding: 20px;
-    clear: both;
-    float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+    
+    
 }
 
 .AsideItems {
-    margin-bottom: 32px;
-    color: #ffffff;
+    margin-bottom: 2px;    /* aside rectangular height */
+    color: #ffffff;     /* Aside section text colour */
+    
 }
 
 
 .AsideItems h3 {
-    margin-bottom: 10px;
+    
     text-align: center;
 }
 
 
 .AsideItems img {
     display: block;
-    margin: 10px auto;
+    margin: 50px auto;
     max-width: 150px;
 }
 
@@ -120,25 +119,30 @@ p {
 
 
 
-.HeaderItems {
+.MainItems {
+    
     margin-bottom: 20px; /* Spacing between the blue rectangular sections on the bottom of the page */
     padding: 50px;
-    height: 300px;
+    height: 360px;
+    margin-right: 25%;
+    margin-left: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    
 }
 
 
 
-.HeaderItems img {
-    max-height: 200px;
+.MainItems img {
+    max-height: 200px;  /* images in blue rectangles height limit i.e. Online rep/socialmedia/search engine opt.*/
 }
 
 
-.HeaderItems h2 {
+.MainItems h2 {
+    
     margin-bottom: 20px;
-    font-size: 36px;
+    font-size: 36px; /* font size for Search engine Optimsation / Online Rep Management/  Social media marketing */
 }
 
 
@@ -146,6 +150,7 @@ p {
 
 /* footer attributes */
 .footer {
+    
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
